--- a/src/components/Content/Chat/style.css
+++ b/src/components/Content/Chat/style.css
@@ -8,9 +8,10 @@
     height: 100%;
     width: 100%;
     display: flex;
-    border: 1px solid gray;
     border-radius: 5px;
     padding: 0;
+
+    max-height: 75vh;
 }
 
 .chat-admin__menu {
@@ -19,7 +20,8 @@
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
-    border: 1px solid gray;
+    border: 2px solid gray;
+    padding: 5px;
 }
 
 .chat-admin__menu::-webkit-scrollbar {
@@ -48,13 +50,13 @@
     padding: 5px 10px;
     
     border-radius: 50px;
-    border: 2px solid gray;
+    border: 1px solid gray;
 
     transition: all 0.3s ease-in-out;
 }
 
 .chat-admin__menu-search:focus {
-    border: 2px solid #2980b9;
+    border: 1px solid #2980b9;
 }
 
 
@@ -75,7 +77,8 @@
 .chat-admin__container .chat-admin__main {
     height: 100%;
     width: 70%;
-    border: 2px solid limegreen;
+    border: 1px solid gray;
+    
 
     display: flex;
     flex-direction: column;
@@ -86,7 +89,10 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid #ccc;
-    padding: 5px 10px;
+    padding: 7px 10px;
+
+    background-color: #2f333e;
+    color: white;
 }
 
 .chat-admin__main-header .current-user__avatar {
@@ -116,7 +122,6 @@
 
 .chat-admin__main-content {
     height: 100%;
-    
     overflow-y: scroll;
 }
 
@@ -138,15 +143,21 @@
 }
 
 .chat-admin__main-footer-send {
-    border: 1px solid gray;
-    border-radius: 30px;
-    padding: 5px 10px;
     cursor: pointer;
-    margin: 0 10px;
-    font-weight: bold;
+    background: transparent;
+    margin-right: 25px;
+    border: none;
+}
+.chat-admin__main-footer-send > i {
+    font-size: 30px;
+    color: limegreen;
+    transition: all 0.3s ease-in-out;
+}
+
+.chat-admin__main-footer-send > i:hover {
+    transform: scale(1.25);
 }
 
 .chat-admin__main-footer-send:hover {
-    background-color: #ccc;
-
+    outline: none;
 }
