--- a/src/components/Content/Chat/style.css
+++ b/src/components/Content/Chat/style.css
@@ -113,16 +113,27 @@
     display: flex;
     align-items: center;
     padding: 5px 10px;
-    border-bottom: 1px solid #ccc;
 }
 
-.me {
+.admin {
     justify-content: flex-end;
+}
+
+.admin > .chat-admin__main-content-item-text{
+    justify-content: flex-end;
+    background-color: #F5F5F5;
 }
 
 .chat-admin__main-content {
     height: 100%;
     overflow-y: scroll;
+}
+
+.chat-admin__main-content-item-text {
+    padding: 3px 7px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    max-width: 60%;
 }
 
 
@@ -160,4 +171,11 @@
 
 .chat-admin__main-footer-send:hover {
     outline: none;
+}
+
+
+
+/* Empty */
+.title__empty {
+    margin: 5px 50px;
 }
